--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "bootstrap-icons": "^1.9.1",
+    "ngx-cookie-service": "^14.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
